# 2024_SHARK_LiDAR

./: .gitignore  README.md  pcd_map_processing.py  pub_map.py
devel/: .catkin  _setup_util.py
devel/include/jsk_recognition_msgs/: PolygonArray.h
devel/include/morai_msgs/: CollisionData.h  DillyCmd.h  DillyCmdResponse.h  EgoVehicleStatus.h  EgoVehicleStatusExtended.h  FaultInjectionCtrlSrv.h  FaultInjectionCtrlSrvRequest.h  FaultInjectionCtrlSrvResponse.h  FaultInjectionSensorSrv.h  FaultInjectionSensorSrvRequest.h  FaultInjectionSensorSrvResponse.h  FaultInjectionTireSrv.h  FaultInjectionTireSrvRequest.h  FaultInjectionTireSrvResponse.h  FaultInjection_Controller.h  FaultInjection_Response.h  FaultInjection_Sensor.h  FaultInjection_Tire.h  FaultStatusInfo.h  FaultStatusInfo_Overall.h  FaultStatusInfo_Sensor.h  FaultStatusInfo_Vehicle.h  MoraiWaitForTickSrv.h  MoraiWaitForTickSrvResponse.h  MultiPlayEventRequest.h  MultiPlayEventResponse.h  MultiPlayEventSrv.h  MultiPlayEventSrvRequest.h  MultiPlayEventSrvResponse.h  ObjectStatusExtended.h  ObjectStatusListExtended.h  SVADC.h  SkateboardCtrlCmd.h  SkateboardStatus.h  SkidSteer6wUGVCtrlCmd.h  SkidSteer6wUGVStatus.h  WaitForTickResponse.h  WoowaDillyEventCmdSrv.h  WoowaDillyEventCmdSrvRequest.h  WoowaDillyEventCmdSrvResponse.h  (+1 more)
devel/lib/LiDAR_perception/: gpslam  local  point_clicker
devel/lib/patchworkpp/: demo  offline_kitti  video
devel/lib/pkgconfig/: LiDAR_perception.pc  jsk_recognition_msgs.pc  morai_msgs.pc  patchworkpp.pc
maps/: Ground.pcd  Lane.pcd
maps/filtered/: filtered_Ground.pcd  filtered_Lane.pcd
src/LiDAR_perception/: CMakeLists.txt  package.xml
src/LiDAR_perception/include/EKF/: FusionEKF.h  gnssEKF.h  kalman_filter.h  measurement_package.h  tools.h
src/LiDAR_perception/include/RCA/: Outer.txt  Ray_Casting_Algorithm.h
src/LiDAR_perception/include/RCA/Inner/: zone::0.txt  zone::1.txt  zone::10.txt  zone::2.txt  zone::3.txt  zone::4.txt  zone::5.txt  zone::6.txt  zone::7.txt  zone::8.txt  zone::9.txt
src/LiDAR_perception/include/RCA/Parking/: parking_zone_0.txt  parking_zone_1.txt  parking_zone_10.txt  parking_zone_11.txt  parking_zone_12.txt  parking_zone_13.txt  parking_zone_14.txt  parking_zone_15.txt  parking_zone_16.txt  parking_zone_17.txt  parking_zone_18.txt  parking_zone_19.txt  parking_zone_2.txt  parking_zone_20.txt  parking_zone_21.txt  parking_zone_22.txt  parking_zone_23.txt  parking_zone_24.txt  parking_zone_25.txt  parking_zone_26.txt  parking_zone_27.txt  parking_zone_28.txt  parking_zone_29.txt  parking_zone_3.txt  parking_zone_30.txt  parking_zone_31.txt  parking_zone_4.txt  parking_zone_5.txt  parking_zone_6.txt  parking_zone_7.txt  parking_zone_8.txt  parking_zone_9.txt
src/LiDAR_perception/include/calibration/: multiLidarCalibration.h
src/LiDAR_perception/include/gpslam/: PC_processing.cpp
src/LiDAR_perception/include/local/: gps_killer.cpp  local.h  local_ekf.h  local_gt.h
src/LiDAR_perception/include/local_path_maker/: local_path_maker.cpp  path_maker.h
src/LiDAR_perception/include/perception/: data_struction.h  fixedQueue.h  local_path_maker.cpp  object_detection.h  process_info.h
src/LiDAR_perception/include/process_info/: process_info.h
src/LiDAR_perception/include/tracking_tools/: tracking_tools.h
src/LiDAR_perception/include/visualization_tool/: visualization_tool.h
src/LiDAR_perception/launch/: LiDAR_perception.rviz  Lidar_calibration.launch  gpslam.launch  gpslam.rviz  ioniq5.launch  lexus.launch  main.launch  run.launch  rviz.launch  test.launch
src/LiDAR_perception/launch/rviz/: multi_LiDAR_perception.rviz  single_LiDAR_perception.rviz
src/LiDAR_perception/maps/: Lane.pcd
src/LiDAR_perception/maps/filtered/: filtered_Ground.pcd  filtered_Lane.pcd
src/LiDAR_perception/path/: seongnam_final_global_path.json
src/LiDAR_perception/scripts/: change_bag_frameid.py  local_test.py  pcd_map_processing.py  pub_map.py
src/LiDAR_perception/src/: local.cpp  local_test.cpp  main.cpp  multi_LiDAR.cpp  point_clicker.cpp  status_manager.cpp
src/LiDAR_perception/urdf/: ioniq5.dae  ioniq5.urdf  lexus.dae  lexus.urdf
src/PG/: trafficLight.txt
src/PG/path/: morai_path.txt
src/PG/scripts/: ACC.py  advanced_purepursuit.py  find_local_path.py  lattice_planner.py  local_path_pub.py  morai_gt_parser.py  path_maker.py  path_pub.py  path_reader.py  pure_pursuit.py  s_drive.py
src/calibration/: CMakeLists.txt  package.xml
src/calibration/calibration_result/2024-01-10/: 10-00-54.txt  10-09-19.txt
src/calibration/calibration_result/2024-01-11/: 10-00-23.txt  10-21-03.txt  11-19-01.txt  15-17-25.txt  16-19-25.txt  최종.txt  최최종.txt  후보1.txt  후보2.txt
src/calibration/calibration_result/2024-01-12/: 08-44-44.txt  09-15-50.txt
src/calibration/include/: utility.h
src/calibration/launch/: calibration.rviz  preprocessing.launch  run.launch
src/calibration/src/: calibrator.py  cloud_maker.cpp  convert_imu_jba.cpp  convert_imu_jj.cpp  pointcloud_rotator.cpp  synchronizor.cpp
src/ndt_localizer/: CMakeLists.txt  package.xml
src/ndt_localizer/cfgs/: rock-auto.rviz
src/ndt_localizer/include/: ndt.h
src/patchwork-plusplus-ros/: CMakeLists.txt
(+157 files in other folders)
